# zorforge

./: Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/editor/: buffer.rs  buffer_manager.rs  clipboard.rs  mod.rs  mode.rs  viewport.rs
src/input/: global_handlers.rs  mod.rs
src/input/handlers/: command.rs  insert.rs  mod.rs  normal.rs  visual.rs
src/ui/: command_line.rs  mod.rs  render.rs  renderer.rs
src/ui/windows/: mod.rs
